--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -1,79 +1,82 @@
 <table class="equipped-stats">
-<tr><td style="width:45%;vertical-align:top">
-    <h3>Weapons and Armor</h3>
-    {{#each rangedWeapons as |item id|}}
-    {{#unless item.system.itemEquipped}}
-    <li style="float:left;" class="item flexrow" data-item-id="{{ item._id }}">
-        <div class="item-controls">
-            <a class="item-control"
-               data-edit
-               data-item-id="{{ item._id }}"
-               title="{{localize 'DOCUMENT.Update' type='item'}}">
-                {{item.name}}({{item.system.quantity}})
-            </a>                <a class="item-control item-delete"
-                                   title="{{localize 'DOCUMENT.Delete' type='item'}}">
-                <i class="fas fa-trash"></i>
-            </a>
-        </div>
-    </li>
-    {{/unless}}
-    {{/each}}
-    {{#each meleeWeapons as |item id|}}
-    {{#unless item.system.itemEquipped}}
-    <li style="float:left;" class="item flexrow" data-item-id="{{ item._id }}">
-        <div class="item-controls">
-            <a class="item-control"
-               data-edit
-               data-item-id="{{ item._id }}"
-               title="{{localize 'DOCUMENT.Update' type='item'}}">
-                {{item.name}}({{item.system.quantity}})
-            </a>                <a class="item-control item-delete"
-                                   title="{{localize 'DOCUMENT.Delete' type='item'}}">
-                <i class="fas fa-trash"></i>
-            </a>
-        </div>
-    </li>
-    {{/unless}}
-    {{/each}}
-    {{#each armors as |item id|}}
-    {{#unless item.system.itemEquipped}}
-    <li style="float:left;" class="item flexrow" data-item-id="{{ item._id }}">
-        <div class="item-controls">
-            <a class="item-control"
-               data-edit
-               data-item-id="{{ item._id }}"
-               title="{{localize 'DOCUMENT.Update' type='item'}}">
-                {{item.name}}({{item.system.quantity}})
-            </a>                <a class="item-control item-delete"
-                                   title="{{localize 'DOCUMENT.Delete' type='item'}}">
-                <i class="fas fa-trash"></i>
-            </a>
-        </div>
-    </li>
-    {{/unless}}
-    {{/each}}
-</td></tr>
+    <tr>
+        <td style="width:45%;vertical-align:top">
+            <h3>Weapons and Armor</h3>
+            {{#each rangedWeapons as |item id|}}
+            {{#unless item.system.itemEquipped}}
+            <li style="float:left;" class="item flexrow" data-item-id="{{ item._id }}">
+                <div class="item-controls">
+                    <a class="item-control"
+                       data-edit
+                       data-item-id="{{ item._id }}"
+                       title="{{localize 'DOCUMENT.Update' type='item'}}">
+                        {{item.name}}({{item.system.quantity}})
+                    </a>                <a class="item-control item-delete"
+                                           title="{{localize 'DOCUMENT.Delete' type='item'}}">
+                        <i class="fas fa-trash"></i>
+                    </a>
+                </div>
+            </li>
+            {{/unless}}
+            {{/each}}
+            {{#each meleeWeapons as |item id|}}
+            {{#unless item.system.itemEquipped}}
+            <li style="float:left;" class="item flexrow" data-item-id="{{ item._id }}">
+                <div class="item-controls">
+                    <a class="item-control"
+                       data-edit
+                       data-item-id="{{ item._id }}"
+                       title="{{localize 'DOCUMENT.Update' type='item'}}">
+                        {{item.name}}({{item.system.quantity}})
+                    </a>                <a class="item-control item-delete"
+                                           title="{{localize 'DOCUMENT.Delete' type='item'}}">
+                        <i class="fas fa-trash"></i>
+                    </a>
+                </div>
+            </li>
+            {{/unless}}
+            {{/each}}
+            {{#each armors as |item id|}}
+            {{#unless item.system.itemEquipped}}
+            <li style="float:left;" class="item flexrow" data-item-id="{{ item._id }}">
+                <div class="item-controls">
+                    <a class="item-control"
+                       data-edit
+                       data-item-id="{{ item._id }}"
+                       title="{{localize 'DOCUMENT.Update' type='item'}}">
+                        {{item.name}}({{item.system.quantity}})
+                    </a>                <a class="item-control item-delete"
+                                           title="{{localize 'DOCUMENT.Delete' type='item'}}">
+                        <i class="fas fa-trash"></i>
+                    </a>
+                </div>
+            </li>
+            {{/unless}}
+            {{/each}}
+        </td>
+    </tr>
 </table>
 
 <table class="backpack">
     <tr>
-        {{#if foodAnddrinks}}
-        <td style="padding-right:10px">
+        <td style="width:60%;padding:5px;">
             <table class="equipped-stats">
-                <tr><td colspan="999" ><h3>Food and Drinks</h3></td></tr>
+                <tr><td colspan="999"><h3>Food and Drinks</h3></td></tr>
                 <div>
-                <tr><td>Name</td><td>Description</td><td>Load</td><td></td></tr>
+                <tr><td>Name</td><td>Qty</td><td>Description</td><td></td></tr>
                 {{#each foodAnddrinks as |item id|}}
                 <tr>
                     <td style="width: 100px">
-                        <span class="label"> {{ item.name }} ({{ system.quantity }}) </span>
+                        <span class="label"> {{ item.name }}</span>
+                    </td>
+                    <td>
+                        <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
+                        {{ system.quantity }}
+                        <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
                     </td>
 
                     <td data-properties="{{item.system.description}}">
                         {{{ item.system.description }}}
-                    </td>
-                    <td>
-                        {{item.system.load}}
                     </td>
                     <td class="td-controls" style="padding:0px;margin:0px;">
                         <li class="item flexrow" data-item-id="{{ item._id }}">
@@ -94,17 +97,23 @@
                 </tr>
                 {{/each}}
             </table>
-            </div>
-            {{/if}}
-        </td>
-        <td>
-            {{#if chems}}
+            </div><br />
             <table class="equipped-stats">
                 <tr><td colspan=999><h3>CHEMS</h3></td></tr>
                 {{#each chems as |item id|}}
                 <tr>
                     <td style="width: 100px">
-                        <span class="label"> {{ item.name }} ({{ system.quantity }}) </span>
+                        <a class="item-control"
+                           data-edit
+                           data-item-id="{{ item._id }}"
+                           title="{{localize 'DOCUMENT.Update' type='item'}}">
+                            <span class="label"> {{ item.name }}</span>
+                        </a>
+                    </td>
+                    <td>
+                        <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
+                        {{ system.quantity }}
+                        <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
                     </td>
 
                     <td>
@@ -113,12 +122,6 @@
                     <td class="td-controls">
                         <li class="item flexrow" data-item-id="{{ item._id }}">
                             <div class="item-controls">
-                                <a class="item-control"
-                                   data-edit
-                                   data-item-id="{{ item._id }}"
-                                   title="{{localize 'DOCUMENT.Update' type='item'}}">
-                                    <i class="fas fa-edit"></i>
-                                </a>
                                 <a class="item-control item-delete"
                                    title="{{localize 'DOCUMENT.Delete' type='item'}}">
                                     <i class="fas fa-trash"></i>
@@ -129,32 +132,33 @@
                 </tr>
                 {{/each}}
             </table>
+        </td>
+        <td style="width:40%;padding:5px;">
             <div>
-                {{/if}}
-
-                {{#if miscItems}}
-
                 <table class="equipped-stats">
                     <tr><td colspan=999><h3>MISC ITEMS</h3></td></tr>
+                    <tr><td>Name</td><td>Qty</td><td></td></tr>
                     {{#each miscItems as |item id|}}
                     <tr>
                         <td class="item-label">
                             <span class="label" style="margin-right: 5px">
-                                {{ item.name }} ({{ system.quantity }})
+                                <a class="item-control"
+                                   data-edit
+                                   data-item-id="{{ item._id }}"
+                                   title="{{localize 'DOCUMENT.Update' type='item'}}">
+                                    {{item.name}}
+                                </a>
                             </span>
                         </td>
 
                         <td>
-                            <details>{{{item.system.description}}}</details>
+                            <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
+                            {{ system.quantity }}
+                            <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
+                        </td>
                         <td class="td-controls">
                             <li class="item flexrow" data-item-id="{{ item._id }}">
                                 <div class="item-controls">
-                                    <a class="item-control"
-                                       data-edit
-                                       data-item-id="{{ item._id }}"
-                                       title="{{localize 'DOCUMENT.Update' type='item'}}">
-                                        <i class="fas fa-edit"></i>
-                                    </a>
                                     <a class="item-control item-delete"
                                        title="{{localize 'DOCUMENT.Delete' type='item'}}">
                                         <i class="fas fa-trash"></i>
@@ -162,11 +166,11 @@
                                 </div>
                             </li>
                         </td>
-        </td>
-    </tr>
-        {{/each}}
-      </table>
-          {{/if}}		  
+            </td>
+         </tr>
+    {{/each}}
+</table>
+
       </div>
     </td>
   </tr>
