--- a/templates/actor/parts/actor-perks.hbs
+++ b/templates/actor/parts/actor-perks.hbs
@@ -1,84 +1,65 @@
 {{#each traits as |item id|}}
-<div style="width: 49%; float: left">
-  <li class="item flexrow" data-item-id="{{ item._id }}">
-    <table class="perk-table" style="border: solid 1px">
-      <tr>
-        <td>
-          <h3>{{ item.name }}</h3>
-          <div class="perk-div"><img class="perk-image" src="{{ item.img }}" /></div>
-        </td>
-      </tr>
-      <tr>
-        <td><details>{{{ item.system.description }}}</details></td>
-      </tr>
-      <tr>
-        <td style="text-align: right; padding-right: 5px">
-           <li class="item flexrow" data-item-id="{{ item._id }}">
-              <div class="item-controls">
-                <a
-                  style="float: right; margin-right: 10px"
-                  class="item-control item-delete"
-                  title="{{localize 'DOCUMENT.Delete' type='item'}}"
-                >
-                  <i class="fas fa-trash"></i>
-                </a>
-                <a
-                  style="float: right; margin-right: 10px"
-                  class="item-control"
-                  data-edit
-                  data-item-id="{{ item._id }}"
-                  title="{{localize 'DOCUMENT.Update' type='item'}}"
-                >
-                  <i class="fas fa-edit"></i>
-                </a>
-              </div>
-            </li>
-        </td>
-      </tr>
-    </table>
-  </li>
+<div style="width: 33%; float: left;min-height:265px;">
+    <li class="item flexrow" data-item-id="{{ item._id }}">
+        <table class="perk-table" style="border: solid 1px">
+            <tr>
+                <td>
+                    <div class="perk-div">
+                        <h3>{{ item.name }}</h3>
+                        <a class="item-control"
+                           data-edit
+                           data-item-id="{{ item._id }}"
+                           title="View Item Details">
+                            <img class="perk-image" src="{{ item.img }}" />
+                        </a>
+                    </div>
+                    <div class="perk-div">
+                        <p style="margin-top:-3px">TRAIT</p>
+                    </div>
+                    <div class="perk-div">
+                        <a style="float: right; margin-right: 10px;margin-top:-20px;"
+                           class="item-control item-delete"
+                           title="{{localize 'DOCUMENT.Delete' type='item'}}">
+                            <i class="fas fa-trash"></i>
+                        </a>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </li>
 </div>
 {{/each}}
 
-
 {{#each perks as |item id|}}
-<div style="width: 49%; float: left">
-  <li class="item flexrow" data-item-id="{{ item._id }}">
-    <table class="perk-table" style="border: solid 1px">
-      <tr>
-        <td>
-          <h3>{{ item.name }}</h3>
-          <div class="perk-div"><img class="perk-image" src="{{ item.img }}" /></div>
-        </td>
-      </tr>
-      <tr>
-        <td><summary><details>Current Level: {{system.perkLevel.value}}<br>{{{ item.system.description }}}</details></summary></td>
-      </tr>
-      <tr>
-        <td style="text-align: right; padding-right: 5px">
-            <li class="item flexrow" data-item-id="{{ item._id }}">
-              <div class="item-controls">
-                <a
-                  style="float: right; margin-right: 10px"
-                  class="item-control item-delete"
-                  title="{{localize 'DOCUMENT.Delete' type='item'}}"
-                >
-                  <i class="fas fa-trash"></i>
-                </a>
-                <a
-                  style="float: right; margin-right: 10px"
-                  class="item-control"
-                  data-edit
-                  data-item-id="{{ item._id }}"
-                  title="{{localize 'DOCUMENT.Update' type='item'}}"
-                >
-                  <i class="fas fa-edit"></i>
-                </a>
-              </div>
-            </li>
-        </td>
-      </tr>
-    </table>
-  </li>
+<div style="width: 33%; float: left;min-height:265px;>
+    <li class="item flexrow" data-item-id="{{ item._id }}">
+        <table class="perk-table" style="border: solid 1px">
+            <tr>
+                <td>
+                    <div class="perk-div">
+                        <h3>{{ item.name }}</h3>
+                        <a class="item-control"
+                           data-edit
+                           data-item-id="{{ item._id }}"
+                           title="View Item Details">
+                            <img class="perk-image" src="{{ item.img }}" />
+                        </a>
+                    </div>
+                    <div class="perk-div">
+                        <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
+                        {{ system.quantity }}
+                        <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
+                    </div>
+                    <div class="perk-div">
+                        <a style="float: right; margin-right: 10px;margin-top:-20px;"
+                           class="item-control item-delete"
+                           title="{{localize 'DOCUMENT.Delete' type='item'}}">
+                            <i class="fas fa-trash"></i>
+                        </a>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </li>
 </div>
 {{/each}}
