--- a/templates/item/item-perk-sheet.hbs
+++ b/templates/item/item-perk-sheet.hbs
@@ -34,8 +34,8 @@
               style="width: 35px; text-align: center"
               type="number"
               min="1"
-              name="system.perkLevel.value"
-              value="{{system.perkLevel.value}}"
+              name="system.quantity"
+              value="{{system.quantity}}"
             />
           </td>
         </tr>
