--- a/templates/item/item-miscItem-sheet.hbs
+++ b/templates/item/item-miscItem-sheet.hbs
@@ -7,8 +7,8 @@
       </h1>
     </div>
   </header>
- <table
-        ><tr>
+ <table>
+     <tr>
     <td>
        Being Worn: <input type="checkbox" name="system.worn" {{checked system.worn}} />
     </td>
@@ -17,7 +17,7 @@
     </td>
 </tr>
     </table>
-  <table>
+  <table class="equipped-stats">
       <tr>
           <td>Cost</td>
           <td title="Calculated Total to Carry Load">Actual Load</td>
