--- a/templates/actor/parts/actor-crafting.hbs
+++ b/templates/actor/parts/actor-crafting.hbs
@@ -1,13 +1,20 @@
 <table class="backpack">
     <tr>
-        {{#if materials}}
-        <td style="padding-right:10px;">
-            <table class="equipped-stats" style="margin-right:5px;max-width:250px;">
+        <td style="padding-right:10px;width:40%">
+            <table class="equipped-stats">
                 <tr><td colspan="999"><h3>Materials</h3></td></tr>
+                <tr><td>Name</td><td>Qty</td><td></td></tr>
                 {{#each materials as |item id|}}
             <tr>
-                <td>{{item.name}}</td>
                 <td>
+                    <a class="item-control"
+                       data-edit
+                       data-item-id="{{ item._id }}"
+                       title="{{localize 'DOCUMENT.Update' type='item'}}">
+                        {{item.name}}
+                    </a>
+                </td>
+                <td style="width:80px">
                     <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
                     {{ system.quantity }}
                     <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
@@ -15,12 +22,6 @@
                 <td class="td-controls">
                     <li class="item flexrow" data-item-id="{{ item._id }}">
                         <div class="item-controls">
-                            <a class="item-control"
-                               data-edit
-                               data-item-id="{{ item._id }}"
-                               title="{{localize 'DOCUMENT.Update' type='item'}}">
-                                <i class="fas fa-edit"></i>
-                            </a>
                             <a class="item-control item-delete"
                                title="{{localize 'DOCUMENT.Delete' type='item'}}">
                                 <i class="fas fa-trash"></i>
@@ -31,16 +32,25 @@
             </tr>
                 {{/each}}
             </table>
-            {{/if}}
         </td>
         <td>
-            {{#if junk}}
             <table class="equipped-stats">
                 <tr><td colspan=999><h3>junk</h3></td></tr>
+                <tr><td>Name</td><td>Qty</td><td>Materials</td><td></td></tr>
                 {{#each junk as |item id|}}
                 <tr>
-                    <td style="max-width: 225px;min-width:150px">
-                        <span class="label"> {{ item.name }} ({{ system.quantity }}) </span>
+                    <td>
+                        <a class="item-control"
+                           data-edit
+                           data-item-id="{{ item._id }}"
+                           title="{{localize 'DOCUMENT.Update' type='item'}}">
+                            {{item.name}}
+                        </a>
+                    </td>
+                    <td style="width:80px;">
+                        <i style="padding:3px;" data-itemsubtraction data-item="{{item._id}}" class="fas fa-minus-square"></i>
+                        {{ system.quantity }}
+                        <i style="padding:3px;" data-itemaddition data-item="{{item._id}}" class="fas fa-plus-square"></i>
                     </td>
 
                     <td>
@@ -51,12 +61,6 @@
                     <td class="td-controls">
                         <li class="item flexrow" data-item-id="{{ item._id }}">
                             <div class="item-controls">
-                                <a class="item-control"
-                                   data-edit
-                                   data-item-id="{{ item._id }}"
-                                   title="{{localize 'DOCUMENT.Update' type='item'}}">
-                                    <i class="fas fa-edit"></i>
-                                </a>
                                 <a class="item-control item-delete"
                                    title="{{localize 'DOCUMENT.Delete' type='item'}}">
                                     <i class="fas fa-trash"></i>
@@ -68,5 +72,4 @@
                 {{/each}}
             </table>
             <div>
-                {{/if}}
 </table>
