--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -21,8 +21,7 @@
                 for="{{ abilityKey }}"
                 class="resource-label rollable"
                 data-rollable
-                data-roll="d20+{{skill.value}}+{{#with (lookup ../../system.abilities [abilityKey])}} 
-				{{mod}} {{/with}}-{{../../system.penaltyTotal}}+@luckmod"
+                data-roll="d20+{{skill.value}}+{{#with (lookup ../../system.abilities [abilityKey])}} {{mod}} {{/with}}-{{../../system.penaltyTotal}}+@luckmod"
                 data-label="Performed a {{skill.label}} roll using {{#with (lookup ../../system.abilities [abilityKey])}}{{label}} {{/with}}"
               >
                 {{ abilityKey }}
@@ -30,7 +29,7 @@
             </p>
             {{/each}}
           </td>
-          <td class="skill-label">{{ skill.label }}</td>
+          <td class="skill-label" title="Modifiers: {{skill.modifiers}}">{{ skill.label }}</td>
           <td class="skill-value">
               <i style="padding:3px;" data-skillsubtraction data-skill="{{skill.id}}" class="fas fa-minus-square"></i> 
               {{ skill.value }} 
